--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit colors="true"
-         stopOnFailure="false"
-         bootstrap="./vendor/autoload.php"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true">
+<phpunit colors="true" stopOnFailure="false" bootstrap="./vendor/autoload.php">
     <testsuites>
         <testsuite name="common">
             <directory suffix="Test.php">tests</directory>
         </testsuite>
     </testsuites>
-    <filter>
-        <blacklist>
+
+    <coverage>
+        <exclude>
             <directory>./vendor</directory>
-        </blacklist>
-    </filter>
+        </exclude>
+    </coverage>
+
+    <logging>
+        <testdoxHtml outputFile="logs/testdox.html"/>
+        <testdoxText outputFile="logs/testdox.txt"/>
+    </logging>
 </phpunit>
