--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,35 @@
 {
-    "name": "tackk/cartographer",
+    "name": "creativefactoryrv/cartographer",
     "description": "A PHP sitemap generation tool.",
+    "version": "1.0.0",
     "keywords": ["sitemap", "generator"],
     "license": "MIT",
     "authors": [
         {
             "name": "Dan Horrigan",
             "email": "dh@tackk.com"
+        },
+        {
+            "name": "Daniele Viganò"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require-dev": {
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "11.4.*"
     },
     "require": {
-        "php": ">=5.4",
-        "league/flysystem": "1.0.*"
+        "php": "^8.0.2",
+        "league/flysystem": "3.*"
     },
     "autoload": {
         "files": [
             "src/functions.php"
         ],
         "psr-4": {
-            "Tackk\\Cartographer\\": "src/"
+            "CreativeFactoryRV\\Cartographer\\": "src/"
         }
+    },
+    "extra": {
+        "note": "This fork includes modifications by Daniele Viganò to address a vulnerability caused by using an outdated version of League\\Flysystem as of 28/10/2024, based on the original work by Dan Horrigan."
     }
 }
