--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "creativefactoryrv/cartographer",
-    "description": "A PHP sitemap generation tool.",
+    "description": "A powerful yet user-friendly PHP sitemap generator designed to create large, comprehensive sitemaps.",
     "version": "1.1.3",
     "keywords": ["sitemap", "generator"],
     "license": "MIT",
